--- a/css/info.css
+++ b/css/info.css
@@ -110,7 +110,7 @@ hr {
 
 .inquiry {
     border-radius: 30px;
-    max-width: 95vw;
+    max-width: 95%;
     height: auto;
     text-align: center;
 }
